add notes and display notes in admin

--- a/Backend/views/adminHome.ejs
+++ b/Backend/views/adminHome.ejs
@@ -9,10 +9,8 @@
     <h1>Admin Dashboard</h1>
 
 
-    <a href="addNotes">Add Notes</a>
-    <a href="addNotes">Display Notes</a>
-    <a href="addNotes">Edit Notes</a>
-    <a href="addNotes">Delete Notes</a>
+    <a href="addNotes">Add Notes</a> 
+    <a href="displayNotes">Display Notes</a>
 
     <br>
     <br>
