--- a/Backend/views/adminDisplayNotes.ejs
+++ b/Backend/views/adminDisplayNotes.ejs
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <%- include('header.ejs')%>
+
     <h1>Displaying All Notes</h1>
 
     <div class="">
@@ -14,8 +15,9 @@
 
             <span>NotesId : <%= note.id%></span> <br>
             <span>Title : <%= note.title%></span> <br>
-            <span>Content : <%= note.content%></span>
-
+            <span>Content : <%= note.content%></span> <br>
+            <span>Edit Notes : <a href="/admin/editNote">edit</a> </span> <br>
+            <span>Delete Notes : <a href="/admin/deleteNote/<%= note.id%>">delete</a> </span> <br>
             <br>
             <br>
             <br>
