crud operations for admin notes

--- a/Backend/views/adminDisplayNotes.ejs
+++ b/Backend/views/adminDisplayNotes.ejs
@@ -16,7 +16,7 @@
             <span>NotesId : <%= note.id%></span> <br>
             <span>Title : <%= note.title%></span> <br>
             <span>Content : <%= note.content%></span> <br>
-            <span>Edit Notes : <a href="/admin/editNote">edit</a> </span> <br>
+            <span>Edit Notes : <a href="/admin/editNote/<%= note.id%>">edit</a> </span> <br>
             <span>Delete Notes : <a href="/admin/deleteNote/<%= note.id%>">delete</a> </span> <br>
             <br>
             <br>
