--- a/Backend/views/adminEditNote.ejs
+++ b/Backend/views/adminEditNote.ejs
@@ -9,7 +9,7 @@
 
     <h1>Edit Note</h1>
     <br>
-    <form action="/admin/editNote/<%= note.id%>" method="post">
+    <form action="/admin/editNote/<%= note._id%>" method="post">
         <label for="">Title</label>
         <input type="text" name="title" value="<%= note.title%>" id=""> <br>
         <label for="">Content</label>
