--- a/Backend/views/studentHome.ejs
+++ b/Backend/views/studentHome.ejs
@@ -6,14 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <h1>Student Home</h1>
-    <a href="displayNotes">Display Notes</a>
-    <a href="searchNotes">Search Notes</a>
+    <%- include('studentHeader')%>
+    <div class="p-3">
 
-    <br>
-    <br>
-    <a href="logout" style="color : red;">logout</a>
+        <h1>Student Home</h1>
+        <a href="displayNotes">Display Notes</a>
+        <a href="searchNotes">Search Notes</a>
+    
+        <br>
+        <br>
+    </div>
 
 
 </body>
